test/fail_compilation/fail68.d

class C
{
    const int y;

    void foo()
    {
	y = 6;
    }

    this()
    {
	y = 7;
    }
}
